# nvJPEG2000

./: CMakeLists.txt  CMakePresetsBase.json  README.md
.github/: release-tag.json  release-tag.yml
.github/workflows/: build.yml  release.yml
